<package format="2">
<name>lidarmatmsg</name>
<version>1.2.4</version>
<description> Message comprising depth information, material of hit, and angle of hit for range and depth sensor </description>
<maintainer email="florian.spiess@fhws.de">Florian Spiess</maintainer>
<license>BSD</license>
<url>http://ros.org/wiki/foo_core</url>
<author>Florian Spiess</author>
<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>std_msgs</depend>
<build_depend>message_generation</build_depend>
<exec_depend>message_runtime</exec_depend>
</package>
